--- a/TSF Task 1 .ipynb
+++ b/TSF Task 1 .ipynb
@@ -26,6 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Created By Lumbini S "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Step 1: Importing data"
    ]
   },
@@ -939,13 +946,6 @@
    "metadata": {},
    "source": [
     "#### According to the regression model if a student studies for 9.25 hours a day he/she is likely to score 93.893 marks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Created By Lumbini S."
    ]
   }
  ],
